small fixes to social icons and navigation elements on mobile devices

--- a/src/style.sass
+++ b/src/style.sass
@@ -48,11 +48,27 @@ body
   header
     margin: 120px 0
     display: flex
-    a img
-      max-width: 40px
+    flex: 1 100%
+    @media (max-width: 768px)
+      flex-direction: column
+      // align-content: center
+      // justify-content: center
+      // flex-basis: auto
+    a 
+      @media (max-width: 768px)
+        padding: 0 0 15px
+      img
+        max-width: 40px
+        @media (max-width: 768px)
+          display: block
+          margin: 0 auto
+          max-width: 100%
     nav
       margin-left: auto
       line-height: 40px
+      @media (max-width: 768px)
+        display: flex
+        justify-content: space-between
       a
         font-size: 1.3rem
         padding: 10px
@@ -156,10 +172,12 @@ body
       max-width: 208px
       margin: 0 auto
       span 
-        padding: 5px
+        padding: 10px 0 0
         a
           color: rgba(0,0,0,0.5)
           padding: 5px
+          @media (max-width:768px)
+            padding: 0
           &:hover
             color: rgb(0,0,0)
 
